--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rack/share",
+    "name": "shreers123/share",
     "description": "Share links with Laravel",
     "license": "MIT",
     "keywords": [
