--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "rector/rector": "0.18.6",
         "tightenco/tlint": "dev-main"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Chencha\\Share\\": "src/",
